# cmd/main.go
@@ -129,15 +129,16 @@ func main() {
 	r.HandleFunc("/register", userHandler.Register).Methods("POST")
 	r.HandleFunc("/login", userHandler.Login).Methods("POST")
 
-	r.HandleFunc("/brand/{BRAND_ID:[0-9]+}", http.HandlerFunc(brandHandler.Get)).Methods("GET")
-	r.Handle("/brand", authManager.Auth(http.HandlerFunc(brandHandler.Create), "admin")).Methods("PUT")
-	r.Handle("/brand/{BRAND_ID:[0-9]+}", authManager.Auth(http.HandlerFunc(brandHandler.Update), "admin")).Methods("POST")
-	r.Handle("/brand/{BRAND_ID:[0-9]+}", authManager.Auth(http.HandlerFunc(brandHandler.Delete), "admin")).Methods("DELETE")
+	r.HandleFunc("/brands/{BRAND_ID:[0-9]+}", http.HandlerFunc(brandHandler.Get)).Methods("GET")
+	r.Handle("/brands", authManager.Auth(http.HandlerFunc(brandHandler.Create), "admin")).Methods("PUT")
+	r.Handle("/brands/{BRAND_ID:[0-9]+}", authManager.Auth(http.HandlerFunc(brandHandler.Update), "admin")).Methods("POST")
+	r.Handle("/brands/{BRAND_ID:[0-9]+}", authManager.Auth(http.HandlerFunc(brandHandler.Delete), "admin")).Methods("DELETE")
 
-	r.HandleFunc("/item/{ITEM_ID:[0-9]+}", http.HandlerFunc(itemHandler.Get)).Methods("GET")
-	r.Handle("/item", authManager.Auth(http.HandlerFunc(itemHandler.Create), "admin")).Methods("PUT")
-	r.Handle("/item/{ITEM_ID:[0-9]+}", authManager.Auth(http.HandlerFunc(itemHandler.Update), "admin")).Methods("POST")
-	r.Handle("/item/{ITEM_ID:[0-9]+}", authManager.Auth(http.HandlerFunc(itemHandler.Delete), "admin")).Methods("DELETE")
+	r.HandleFunc("/items/{ITEM_ID:[0-9]+}", http.HandlerFunc(itemHandler.Get)).Methods("GET")
+	r.Handle("/items", authManager.Auth(http.HandlerFunc(itemHandler.Create), "admin")).Methods("PUT")
+	r.Handle("/items/{ITEM_ID:[0-9]+}", authManager.Auth(http.HandlerFunc(itemHandler.Update), "admin")).Methods("POST")
+	r.Handle("/items/{ITEM_ID:[0-9]+}", authManager.Auth(http.HandlerFunc(itemHandler.Patch), "admin")).Methods("PATCH")
+	r.Handle("/items/{ITEM_ID:[0-9]+}", authManager.Auth(http.HandlerFunc(itemHandler.Delete), "admin")).Methods("DELETE")
 	r.HandleFunc("/items", http.HandlerFunc(itemHandler.GetAll)).Methods("GET")
 
 	r.Handle("/basket", authManager.Auth(http.HandlerFunc(basketHandler.Get), "user", "admin")).Methods("GET")
